fixed spacing issue in text

--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@
 <body>
     <h2>Who is Holly Ceolin?</h2>
 		<p>
-            Holly is a small town girl, and is in her "healthy 30's".  She lives in Evansville, IN with her husband, Lucas, her 10 month old son, Sebastian, and her French Bulldog, Bruce. <br><br>
+            Holly is a small town girl, in her "healthy 30's".  She lives in Evansville, IN with her husband, Lucas, her 10 month old son, Sebastian, and her French Bulldog, Bruce. <br><br>
 
         </p>
 		
